--- a/style/css/stylesheet.css
+++ b/style/css/stylesheet.css
@@ -1,8 +1,8 @@
 :root {
-  --main-bg-color: #f80707;
-  --second-color: #383e65;
+  --main-bg-color: #D77692;
+  --second-color: #6F6FAC;
   --home-accent: white;
-  --work-bg: white;
+  --work-bg: #E4A5BB;
   --text-color: white;
   --article-code-bg: #cbc5d4;
   --hover-style: rgba(255, 255, 255, 0.2);
